fixing welcome state component jump

--- a/client/src/components/PageContent/Welcome/Welcome.css
+++ b/client/src/components/PageContent/Welcome/Welcome.css
@@ -61,13 +61,23 @@ body {
   animation: fadeIn 10s;
 }
 
-/* Button */
+/* Button position */
 .welcome-next-button-control0 {
   margin: 50px 0px 150px 0px;
 }
+@media only screen and (min-width: 801px) {
+  .welcome-next-button-control0 {
+    margin: 0px 0px 0px 0px;
+  }
+}
 
 .welcome-next-button-control1 {
-  margin: 250px 0px 150px 0px;
+  margin: 222px 0px 150px 0px;
+}
+@media only screen and (max-width: 801px) {
+  .welcome-next-button-control1 {
+    margin: 218px 0px 150px 0px;
+  }
 }
 
 .welcome-next-button-control2 {
@@ -76,7 +86,7 @@ body {
 
 @media only screen and (max-width: 801px) {
   .welcome-next-button-control2 {
-    margin: 100px 0px 150px 0px;
+    margin: 90px 0px 150px 0px;
   }
 }
 
